All Services now communicates with JPA AND All tests Fixed